@@ -2,7 +2,6 @@ package com.peliculas.grupo3.service;
 
 import com.peliculas.grupo3.dto.OrderDTO;
 import com.peliculas.grupo3.dto.OrderTargetDTO;
-import com.peliculas.grupo3.mapper.MovieMapper;
 import com.peliculas.grupo3.mapper.OrderMapper;
 import com.peliculas.grupo3.model.Movie;
 import com.peliculas.grupo3.model.MovieOrder;
@@ -13,11 +12,12 @@ import com.peliculas.grupo3.repository.UserRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import javax.transaction.Transactional;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.UUID;
-
+import java.util.stream.Collectors;
 
 
 @AllArgsConstructor
@@ -30,10 +30,9 @@ public class OrderService {
 
     private final UserRepository userRepository;
 
-    private final MovieMapper movieMapper;
-
     private final MovieRepository movieRepository;
 
+    @Transactional
     public OrderDTO save(OrderDTO orderDTO){
 
         if(orderDTO.getTotal()<0){
@@ -68,8 +67,13 @@ public class OrderService {
         if(orderDTO.getMovies().isEmpty()){
             order.setMovies(List.of());
         }else {
-            order.setMovies(orderDTO.getMovies().stream().map(movieMapper::fromMovieDTO).toList());
+            List<Movie> movies = orderDTO.getMovies().stream()
+                    .map(movieDto -> movieRepository.findByName(movieDto.getName())
+                            .orElseThrow(() -> new RuntimeException("No existe una pelicula de la orden")))
+                    .collect(Collectors.toList());
+            order.setMovies(movies);
         }
+
 
         order.setUser(user);
         order.setOrderId(UUID.randomUUID());
